--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_weidth="match_parent"
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/onOff"
@@ -77,4 +77,4 @@
         android:textSize="18sp"
         android:textStyle="italic" />
 
-</LinearLayout>
+</RelativeLayout>
